# asciidoctor-server

./: .envrc  Cargo.toml  README.adoc  flake.nix  go.mod  go.sum  justfile
.github/actions/manual-cross-prereqs/: README.adoc  action.yml  index.js
.github/actions/protoc/: action.yml
.github/workflows/: CD.yml  CI.yml  CICD.yml  publish.yml  renovate.yml
client/: Cargo.toml  build.rs  flake.nix
client-go/: main.go
client-go/proto/: asciidoctor.pb.go
client-rs/: .goreleaser.yaml  Cargo.toml  build.rs  justfile
client-rs/src/: asciidoctor.proto  cli.rs  lib.rs  main.rs
client/src/: main.rs
comms/: Cargo.toml
comms/src/: lib.rs
proto/: asciidoctor.pb.go  asciidoctor.proto  asciidoctor_grpc.pb.go
server/: .envrc  .gitignore  .rubocop.yml  Cargo.toml  Gemfile  LICENSE.txt  README.md  Readme.md  asciidoctor-server.gemspec  asciidoctor_server.gemspec  flake.nix  gemset.nix  justfile
server-rb/: .envrc  asciidoctor-server.gemspec  asciidoctor_server.gemspec  flake.nix  gemset.nix  justfile
server-rb/exe/: asciidoctor-server
server-rb/lib/: asciidoctor-server.rb  asciidoctor_pb.rb  asciidoctor_server.rb  asciidoctor_services_pb.rb
server-rb/lib/asciidoctor-server/: cli.rb  version.rb
server-rb/lib/asciidoctor_server/: version.rb
server-rb/sig/: asciidoctor_server.rbs
server-rb/test/: test_asciidoctor_server.rb
server-rs/: Cargo.toml
server-rs/src/: lib.rs  magnus.rs  rosy.rs  rutie.rs
server/exe/: asciidoctor-server  asciidoctor_server
server/lib/: asciidoctor-server.rb
server/lib/asciidoctor-server/: asciidoctor_pb.rb  asciidoctor_services_pb.rb  cli.rb  version.rb
server/test/: test_helper.rb
