[workspace]
members = [
    "client",
    "server-rs",
    "comms"
]
resolver = "2"

[workspace.package]
authors = ["hybras"]
description = "A kludge to improve the performance of static site generators that use asciidoc through its cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/hybras/asciidoctor-batch"
documentation = "https://github.com/hybras/asciidoctor-batch"
homepage = "https://github.com/hybras/asciidoctor-batch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
zmq = "0.10.0"
futures = "0.3"
tarpc = { version = "0.33", features = ["tokio1"] }
tokio = { version = "1.0", features = ["macros"] }
anyhow = "1.0.75"

[patch.crates-io]
rusty-fork = { git = "https://github.com/daxpedda/rusty-fork", branch = "proc-macro-feature" }