[package]
name = "asciidoctor-batch-client"
authors = ["hybras"]
description = "A kludge to improve the performance of static site generators that use asciidoc through its cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/hybras/asciidoctor-batch"
documentation = "https://github.com/hybras/asciidoctor-batch"
homepage = "https://github.com/hybras/asciidoctor-batch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
prost = "0.12"
# Only necessary if using Protobuf well-known types:
prost-types = "0.12.1"
argh = "0.1.12"

[build-dependencies]
prost-build = "0.12.1"
