[package]
name = "asciidoctor-batch-client"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
edition.workspace = true
homepage.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq.workspace = true
prost = "0.12"
# Only necessary if using Protobuf well-known types:
prost-types = "0.12.1"
argh = "0.1.12"

[build-dependencies]
prost-build = "0.12.1"
