[package]
name = "comms"
authors.workspace = true
description = "Add zmq support to tarpc"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq.workspace = true
futures.workspace = true
tarpc.workspace = true
