[package]
name = "asciidoctor-server"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
edition.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magnus = { version = "0.6.2", features = ["embed"] }
rusty-fork = { version = "0.3.0", features = ["macro"] }
zmq.workspace = true
futures.workspace = true
tarpc.workspace = true
tokio.workspace = true
anyhow.workspace = true
