[package]
name = "asciidoctor-batch-server"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
edition.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
